canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: canary-html
          items:
          - key: index.html
            path: index.html
      strategy:
        canary:
          steps:
          - setWeight: 20
            pause:
              duration: 1m
          - setWeight: 40
            pause:
              duration: 1m
          - setWeight: 60
            pause:
              duration: 1m
          - setWeight: 80
            pause:
              duration: 1m
          - setWeight: 100
