ingress_keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ui-nginx
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "keycloak.aws.newbusinesshom.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service: 
            name: keycloak
            port:
              number: 80
